versioned_docs/version-3.25.0/getting-started/configuration.mdx
---
title: "Configuration"
id: "configuration"
slug: "configuration"
---

import CodeBlock from "@theme/CodeBlock";
import OnboardingConfiguration from "!!raw-loader!./onboarding-configuration.yml";

:::info

If you have selected the installation option `Only select repositories` you don't need to follow this guide. Reviewpad will automatically create a pull request in the select repositories with the configuration file. **You will need to merge the pull request to start using Reviewpad.**

:::

Now that you have installed Reviewpad it's time to configure it.

**The Reviewpad configuration is a YAML file that defines the workflows that automate your pull request process.**

In this example we will add a configuration with some of the best practices for pull request reviews.

## Add `reviewpad.yml` to the root of your repository

:::caution

Please note that you will need to **add a `reviewpad.yml` file to each repository** where you want to use Reviewpad.

:::

Reviewpad will look for a `reviewpad.yml` file in the root of your repository and follow the workflows defined in it.

Create a file called `reviewpad.yml` in the root of your repository and add the following content:

<CodeBlock language="yml" title="reviewpad.yml">{OnboardingConfiguration}</CodeBlock>

![Reviewpad Installation - Step 3](/img/installation/step3.gif)

That's it! :tada:

Reviewpad will run on every pull request and follow the workflows defined in the `reviewpad.yml` configuration file.

**👉 Don't forget to commit and push the `reviewpad.yml` file to your repository.**

## Next steps

Now that you have configured Reviewpad you can start using it to automate your pull request process.

Have a look at the [use cases](../use-cases) to see how Reviewpad can help you.

:::info Terms and Conditions

By running Reviewpad, you are agreeing with [Reviewpad's Terms and Conditions](https://reviewpad.com/terms-and-conditions/).
:::
